src/test/ui/error-codes/E0496.stderr
error[E0496]: lifetime name `'a` shadows a lifetime name that is already in scope
  --> $DIR/E0496.rs:16:10
   |
15 | impl<'a> Foo<'a> {
   |      -- first declared here
16 |     fn f<'a>(x: &'a i32) { //~ ERROR E0496
   |          ^^ lifetime 'a already in scope

error: aborting due to previous error

